add flag for kb embeddings

--- a/notebooks/1.7-coherence-experimentation-tester.ipynb
+++ b/notebooks/1.7-coherence-experimentation-tester.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d193284e",
+   "id": "19a17b53",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "5b1a275e",
+   "id": "fea45027",
    "metadata": {},
    "outputs": [
     {
@@ -102,17 +102,13 @@
     "from src.bertkeywords.src.keywords import Keywords\n",
     "from src.encoders.coherence import Coherence\n",
     "from src.dataset.utils import flatten, dedupe_list, truncate_string\n",
-    "from src.experimentation.coherence import SimpleExperiment, CoherenceExperiment\n",
-    "\n",
-    "import warnings\n",
-    "\n",
-    "warnings.filterwarnings(\"ignore\")"
+    "from src.experimentation.coherence import SimpleExperiment, CoherenceExperiment"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "a76dcf05",
+   "id": "b88a4bfd",
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "d0c8dc08",
+   "id": "96e31dd5",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "377fa58e",
+   "id": "2b37d488",
    "metadata": {},
    "outputs": [],
    "source": []
